Updated Workflow with short documentation

--- a/basic.ipynb
+++ b/basic.ipynb
@@ -497,7 +497,87 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# CV Evaluation Workflow using LangGraph and Mistral AI\n",
+    "\n",
+    "## Overview\n",
+    "This Jupyter Notebook demonstrates a workflow for evaluating a candidate's CV against a job description using LangGraph and Mistral AI. The workflow includes reading the CV and job description, evaluating the match, and generating a professional email response.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Workflow Steps\n",
+    "\n",
+    "### 1. **Setup and Dependencies**\n",
+    "- Installed required dependencies using `requirements.txt`.\n",
+    "- Set up the Mistral API key for authentication.\n",
+    "\n",
+    "### 2. **Language Model Configuration**\n",
+    "- Configured the `ChatMistralAI` model with the following parameters:\n",
+    "    - Model: `mistral-small-latest`\n",
+    "    - Temperature: `0`\n",
+    "    - Maximum Retries: `10`\n",
+    "\n",
+    "### 3. **Prompts**\n",
+    "- **System Prompt**: Guides the AI to act as a helpful assistant for translations.\n",
+    "- **Human Prompt**: Requests translations for the sentence \"I love programming\" into Japanese and French.\n",
+    "\n",
+    "### 4. **State Management**\n",
+    "- Defined a `State` object to manage the workflow's state.\n",
+    "- Initial state includes paths to the CV (`cv.txt`) and job description (`job_descrip.txt`).\n",
+    "\n",
+    "### 5. **Functions**\n",
+    "- **`get_cv_content`**: Reads the CV content and updates the state.\n",
+    "- **`get_job_description`**: Reads the job description and updates the state.\n",
+    "- **`evaluate_match`**: Evaluates the alignment between the CV and job description.\n",
+    "- **`generate_email`**: Drafts a professional email based on the evaluation.\n",
+    "\n",
+    "### 6. **Graph Construction**\n",
+    "- Created a `StateGraph` to define the workflow:\n",
+    "    - Nodes: Correspond to the defined functions.\n",
+    "    - Edges: Define the sequence of execution.\n",
+    "- Compiled the graph for execution.\n",
+    "\n",
+    "### 7. **Execution**\n",
+    "- Iterated over the graph using the `start_state`.\n",
+    "- Printed the generated email and intermediate outputs.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Key Variables\n",
+    "\n",
+    "| Name            | Type                                      | Description                                                                 |\n",
+    "|-----------------|------------------------------------------|-----------------------------------------------------------------------------|\n",
+    "| `AIMessage`     | `pydantic._internal._model_construction` | Represents AI-generated messages.                                          |\n",
+    "| `ChatMistralAI` | `pydantic._internal._model_construction` | Represents the Mistral AI chat model.                                      |\n",
+    "| `Dict`          | `typing._SpecialGenericAlias`            | Represents a dictionary type.                                              |\n",
+    "| `START`         | `str`                                    | Start node identifier for the graph.                                       |\n",
+    "| `END`           | `str`                                    | End node identifier for the graph.                                         |\n",
+    "| `cv_path`       | `str`                                    | Path to the CV file (`cv.txt`).                                            |\n",
+    "| `job_path`      | `str`                                    | Path to the job description file (`job_descrip.txt`).                      |\n",
+    "| `llm`           | `ChatMistralAI`                         | Configured Mistral AI language model.                                      |\n",
+    "| `workflow`      | `StateGraph`                            | Represents the workflow graph.                                             |\n",
+    "| `graph`         | `CompiledStateGraph`                    | Compiled version of the workflow graph.                                    |\n",
+    "| `start_state`   | `dict`                                   | Initial state containing file paths.                                       |\n",
+    "| `output`        | `AddableUpdatesDict`                    | Final output of the workflow execution.                                    |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# Outputs\n",
+    "- **Translation**: \n",
+    "    - Japanese: プログラミングが大好きです。\n",
+    "    - French: J'adore la programmation.\n",
+    "- **Generated Email**: A professional email communicating the evaluation result.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# Resources\n",
+    "- [LangGraph Documentation](https://langchain-ai.github.io/langgraph/tutorials/introduction/#part-1-build-a-basic-chatbot)\n",
+    "- [CV AI Agent Using Mistral](https://medium.com/@daniel.puenteviejo/langgraph-mistral-cv-evaluator-agent-system-b74ee5390500)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# Thank You\n"
+   ]
   }
  ],
  "metadata": {
